--- a/project/views/itemconfirm.ejs
+++ b/project/views/itemconfirm.ejs
@@ -40,37 +40,35 @@
             <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
               <ul class="list-group">
                 <li class="list-group-item">
-                  <span class="badge" style="color: #000000">
-                    1.
-                  </span>
                   <img
-                    src="https://cdn.discordapp.com/attachments/673990146604924952/698014224126967858/Z.png"
-                    alt="Food Name"
-                    width="50"
-                    height="50"
+                    src="#"
+                    alt="#"
+                    width="25"
+                    height="25"
                   />
                   <strong style="color: #000000">
-                    Food Name
+                    name / restaurant
                   </strong>
                   <span style="color: #000000">
-                    Price
+                    price
+                  </span>
+                  <span style="color: #000000">
+                    Quantity: 
+                    <input 
+                      type="number"
+                      id="itemQuantity"
+                      name="itemQuantity"
+                      min="1" max="100">
                   </span>
                 </li>
               </ul>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-              <strong>
-                Total: MONEY
-              </strong>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-              <button type="button" class="btn btn-success">
-                Checkout
-              </button>
+            <div class="row">
+              <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+                <button type="button" href="#" class="btn btn-success">
+                  Checkout
+                </button>
+              </div>
             </div>
           </div>
         </div>
