--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -26,7 +26,7 @@
         style="text-align: left; color: white"
       >
         <img
-          src="../public/img/rSedLogo.png"
+          src="/public/img/rSedLogo.png"
           style="width: 45px; height: 45px"
         />
         OmNom Food Delivery
