--- a/project/views/shoppingcart.ejs
+++ b/project/views/shoppingcart.ejs
@@ -20,13 +20,13 @@
     />
 
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="../public/css/style.css" />
+    <link rel="stylesheet" href="/public/css/style.css" />
 
     <!-- Icon Title -->
     <title>OmNom Food Delivery</title>
 
     <!-- rSed Title Icon -->
-    <link rel="icon" href="../public/img/rSedLogo.png" type="image/icon type" />
+    <link rel="icon" href="/public/img/rSedLogo.png" type="image/icon type" />
   </head>
 
   <!-- Body -->
