--- a/project/views/itemconfirm.ejs
+++ b/project/views/itemconfirm.ejs
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- Fancy Fonts, Icons, and Logos -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-      crossorigin="anonymous"
-    />
-    <!-- Bootstrap Link -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-      crossorigin="anonymous"
-    />
 
-    <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="/public/css/style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <!-- Fancy Fonts, Icons, and Logos -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
+  <!-- Bootstrap Link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
 
-    <!-- Icon Title -->
-    <title>OmNom Food Delivery</title>
+  <!-- CSS StyleSheet -->
+  <link rel="stylesheet" href="/public/css/style.css" />
 
-    <!-- rSed Title Icon -->
-    <link rel="icon" href="/public/img/rSedLogo.png" type="image/icon type" />
-  </head>
+  <!-- Icon Title -->
+  <title>OmNom Food Delivery</title>
+
+  <!-- rSed Title Icon -->
+  <link rel="icon" href="/public/img/rSedLogo.png" type="image/icon type" />
+</head>
 
 <!-- Body -->
 
@@ -56,15 +49,9 @@
           </div>
           <div class="row">
             <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-<<<<<<< Updated upstream
               <ul class="list-group">
                 <li class="list-group-item">
-                  <img
-                    src="<%=orderItem.image%>"
-                    alt="<%=orderItem.name%>"
-                    width="25"
-                    height="25"
-                  />
+                  <img src="<%=orderItem.image%>" alt="<%=orderItem.name%>" width="25" height="25" />
                   <strong style="color: #000000">
                     <%=orderItem.name%>
                   </strong>
@@ -72,34 +59,23 @@
                     $<%=orderItem.price%>
                   </span>
                   <span style="color: #000000">
-                    Quantity: 
-                    <input 
-                      type="number"
-                      id="itemQuantity"
-                      name="itemQuantity"
-                      min="1" max="100">
+                    Quantity:
+                    <input type="number" id="itemQuantity" name="itemQuantity" min="1" max="100">
                   </span>
                 </li>
               </ul>
             </div>
             <div class="row">
               <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-                <button method="POST" type="button" href="/itemconfirm/<%=restaurant._id%>/<%=orderItem._id%>" class="btn btn-success">
+                <button method="POST" type="button" href="/itemconfirm/<%=restaurant._id%>/<%=orderItem._id%>"
+                  class="btn btn-success">
                   Checkout
                 </button>
-                <button type="button" href="/restaurantprofile/<%=restaurant._id%>" class="btn btn-fail">
-                  <%=restaurant._id%>
+                <button method="GET" type="button" href="/restaurantprofile/<%=restaurant._id%>" class="btn btn-fail">
+                  <!-- <%=restaurant._id%> -->
                   Back
                 </button>
               </div>
-=======
-              <button type="button" href="#" class="btn btn-success">
-                Checkout
-              </button>
-              <button type="button" href="#" class="btn btn-fail">
-                Back
-              </button>
->>>>>>> Stashed changes
             </div>
           </div>
         </div>
