--- a/project/views/shoppingcart.ejs
+++ b/project/views/shoppingcart.ejs
@@ -42,7 +42,7 @@
             <div class="row">
               <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
                 <ul class="list-group">
-                  <% currentOrder.orderItems.forEach(function(orderItem) { %>
+                  <% currentOrder.items.forEach(function(orderItem) { %>
                     <li class="list-group-item">
                       <span class="badge" style="color: #000000">
                         <%=itemCount%>.
@@ -69,7 +69,7 @@
             <div class="row">
               <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
                 <strong>
-                  Total: $<%=total%>
+                  Total: $<%=currentOrder.total%>
                 </strong>
               </div>
             </div>
