--- a/project/views/shoppingcart.ejs
+++ b/project/views/shoppingcart.ejs
@@ -81,13 +81,18 @@
               </ul>
             </div>
           </div>
-          <div class="row">
-            <div
-              class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3"
-              style="text-align: right; padding-left: 50px;"
-            >
+          <div class="d-flex justify-content-center">
+            <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
               <h3>
-                Total: $<%=currentOrder.totalPrice%>
+                <p style="float: left;">
+                  Total: $<%=currentOrder.totalPrice%>
+                </p>
+
+                <p style="float: right;">
+                  <button type="button" href="#" class="btn btn-success">
+                    Checkout
+                  </button>
+                </p>
               </h3>
             </div>
           </div>
@@ -95,11 +100,7 @@
             <div
               class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3"
               style="text-align: right; padding-bottom: 75px;"
-            >
-              <button type="button" href="#" class="btn btn-success">
-                Checkout
-              </button>
-            </div>
+            ></div>
           </div>
         </div>
         <% } else { %>
