--- a/project/views/shoppingcart.ejs
+++ b/project/views/shoppingcart.ejs
@@ -33,7 +33,7 @@
 
   <body>
     <%- include("./partials/header.ejs") %>
-    <header id="home-section">
+    <header style="padding-top: 100px;">
       <div class="dark-overlay">
         <% if (currentOrder) { %>
         <div class="home-inner container">
@@ -65,23 +65,31 @@
                   <strong style="color: black;">
                     <%=orderItem.name%>
                   </strong>
-                  <span style="color: black;">
-                    / <%=orderItem.restaurant.name%> / $<%=orderItem.price%> <%
-                    total += orderItem.price %>
-                  </span>
+
                   <button
                     type="button"
                     href="#"
-                    class="btn btn-danger float-right"
+                    class="float-right btn btn-danger"
                   >
                     Remove
                   </button>
+                  <span style="color: black;">
+                    <%=orderItem.restaurant.name%>
+
+                    <span
+                      class="float-right font-weight-bold"
+                      style="padding-right: 10px;"
+                      >$<%=orderItem.price%>
+                    </span>
+
+                    <% total += orderItem.price %>
+                  </span>
                 </li>
                 <% } ); %>
               </ul>
             </div>
           </div>
-          <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-center" style="padding-top: 25px;">
             <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
               <h3>
                 <p style="float: left;">
