--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -41,7 +41,7 @@ body {
   border: none;
   height: 5px;
   color: #ffd700;
-  background-color: #ffd700
+  background-color: #ffd700;
 }
 
 #profile-section {
@@ -181,4 +181,50 @@ a.thumbnail:focus {
 .image {
   width: 100%;
   height: 90%;
+}
+
+.sidepanel {
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  height: 250px;
+  top: 65px;
+  right: 0;
+  background-color: black;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 30px;
+}
+
+.sidepanel a {
+  padding: 4px 4px 4px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  color: red;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidepanel a:hover {
+  color: red;
+}
+
+.sidepanel .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 25px;
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: red;
+  padding: 10px 15px;
+  border: none;
+}
+
+.openbtn:hover {
+  background-color: black;
 }
