--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -6,7 +6,7 @@
 <nav
   class="navbar navbar-expand-sm navbar-dark fixed-top"
   id="main-nav"
-  style="background-color: red"
+  style="background-color: red;"
   ;
 >
   <!-- 
@@ -19,15 +19,15 @@
           navbar-brand: brand of company
           clicking rSedFoodDelivery sends back to index.html        
         -->
-    <a href="/" style="text-decoration: none">
+    <a href="/" style="text-decoration: none;">
       <div
         class="col font-weight-bold"
         href="signin"
-        style="text-align: left; color: white"
+        style="text-align: left; color: white;"
       >
         <img
           src="/public/img/rSedLogo.png"
-          style="width: 45px; height: 45px"
+          style="width: 45px; height: 45px;"
         />
         OmNom Food Delivery
       </div>
@@ -37,11 +37,96 @@
         -->
     <button
       class="navbar-toggler"
+      onclick="openNav()"
       data-toggle="collapse"
       data-target="#navbarCollapse"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    <div id="mySidepanel" class="sidepanel">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <ul class="navbar-nav ml-auto">
+        <!--
+            <li class="nav-item bg-dark">
+              <a class="btn btn-outline-light" href="/getall" role="button"
+                >Data Dump</a
+              >
+            </li>-->
+        <% if(!currentUser){ %>
+        <li class="nav-item">
+          <a
+            class="btn btn-outline-light mx-2"
+            href="/restaurantcategory"
+            role="button"
+            >Restaurants</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="btn btn-outline-light mx-2 font-weight-bold"
+            href="/signin"
+            role="button"
+            >Sign In</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="btn btn-outline-light mx-2 font-weight-bold"
+            href="/signup"
+            role="button"
+            >Sign Up</a
+          >
+        </li>
+        <% }else{ %>
+        <li>
+          <a>
+            <hr
+              style="margin: 0; border: 0; height: 5pt; visibility: hidden;"
+            />
+            Signed in as <%= currentUser.firstName %>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a
+            class="btn btn-outline-light mx-2 font-weight-bold"
+            href="/profile/<%=currentUser._id%> "
+            role="button"
+          >
+            Profile
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="btn btn-outline-light mx-2 font-weight-bold"
+            href="/restaurantcategory"
+            role="button"
+            >Restaurants</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="btn btn-outline-light mx-2 font-weight-bold"
+            href="/shoppingcart"
+            role="button"
+          >
+            <span class="fa">&#xf07a;</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="btn btn-outline-light mx-2 font-weight-bold"
+            href="/logout"
+            role="button "
+          >
+            Logout
+          </a>
+        </li>
+
+        <% } %>
+      </ul>
+    </div>
 
     <!-- 
           collapse navbar-collapse: replaces the navigation on small screens with a button
@@ -106,7 +191,11 @@
           >
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-light mx-2" href="/shoppingcart" role="button">
+          <a
+            class="btn btn-outline-light mx-2"
+            href="/shoppingcart"
+            role="button"
+          >
             <span class="fa">&#xf07a;</span></a
           >
         </li>
@@ -121,3 +210,13 @@
     </div>
   </div>
 </nav>
+
+<script>
+  function openNav() {
+    document.getElementById("mySidepanel").style.width = "250px";
+  }
+
+  function closeNav() {
+    document.getElementById("mySidepanel").style.width = "0";
+  }
+</script>
